<resources>
    <string name="app_name">EventCal</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>
    <string name="title_group">Groups</string>
    <string name="profile_image_description">Profile Image</string>
    <string name="username">Username</string>
    <string name="default_username">Your Username</string>
    <string name="initial_event_count">0</string>
    <string name="initial_org_count">0</string>
    <string name="events">Events</string>
    <string name="organizations">Organizations</string>
    <string name="share_profile">Share Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="share_profile_description">Share your profile with others</string>
    <string name="edit_profile_description">Edit your profile information</string>
    <string name="settings_description">Go to your settings</string>
    <string name="add_bio_button">+Bio</string>
    <string name="enter_bio_hint">Enter your biography</string>
    <string name="edit_bio">Edit Biography</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="enter_username">Enter new username</string>
    <string name="biography">Biography</string>
    <string name="enter_biography">Enter your biography</string>
    <string name="save_changes">Save Changes</string>
    <string name="hide_calendar">Hide Calendar</string>
    <string name="change_password">Change Password</string>
    <string name="error_fill_fields">Please fill in both fields</string>
    <string name="error_password_length">Password must be at least 8 characters long</string>
    <string name="password_changed">Password changed successfully</string>
    <string name="logout_button_text">Logout</string>

</resources>