<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8F5E9"> <!-- Very light green background -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/nav_view"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/profile_image_description"
                android:scaleType="centerCrop"
                android:background="@drawable/circular_background"
                android:src="@drawable/default_avatar"/>

            <TextView
                android:id="@+id/username_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/username"
                android:textColor="#008000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/events_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/initial_event_count"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/events_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/events"
                        android:textColor="#008000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/organizations_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/initial_org_count"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/organizations_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/organizations"
                        android:textColor="#008000" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/biography_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text=""
                android:textColor="#808080"
                android:textSize="16sp"
                android:textStyle="italic"
                android:visibility="gone" />

            <Button
                android:id="@+id/add_bio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_bio_button"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_button"
                android:textColor="#FFFFFF"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:layout_marginBottom="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="311dp"
                android:gravity="start"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_share_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="#008000"
                    android:contentDescription="@string/share_profile_description"
                    android:drawableStart="@drawable/ic_share"
                    android:drawablePadding="8dp"
                    android:text="@string/share_profile"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/btn_edit_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="#008000"
                    android:contentDescription="@string/edit_profile_description"
                    android:drawableStart="@drawable/ic_edit"
                    android:drawablePadding="8dp"
                    android:text="@string/edit_profile"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/btn_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#008000"
                    android:contentDescription="@string/settings_description"
                    android:drawableStart="@drawable/ic_settings"
                    android:drawablePadding="8dp"
                    android:text="@string/settings"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/btn_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/logout_button_text"
                    android:textColor="@android:color/white"
                    android:backgroundTint="#008000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />



            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/green"
        app:itemHorizontalTranslationEnabled="false"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/bottom_nav_menu" />
</RelativeLayout>
